# MLOps_Study

./: README.md  main.py  pyproject.toml  requirements.txt  setup.sh
data/: test_data.csv  train_data.csv
src/: main.py
src/configs/: config.yaml  config_loader.py
src/model/: model.py  preprocess.py  train.py
